# mood-playlist-agent

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  api.py  main.py  pyproject.toml  streamlit_app.py
.github/workflows/: ci.yml
.streamlit/: config.toml
src/mood_playlist_agent/: __init__.py  context.py  crew_agent.py  display.py  graph_agent.py  main.py  memory.py  models.py  playlist_agent.py  spotify.py  utils.py
tests/: test_examples.py  test_models.py
vibeforge-ui/: index.html  package-lock.json  package.json
vibeforge-ui/src/: App.tsx  index.css  types.ts
vibeforge-ui/src/api/: vibeforge.ts
vibeforge-ui/src/components/: FeedbackPanel.tsx  MoodForm.tsx  PlaylistCard.tsx  ProgressLog.tsx  TrackTable.tsx
