[project]
name = "vibeforge"
version = "0.1.0"
description = "AI agent that generates personalized music playlists based on mood, activity, and context"
requires-python = ">=3.11"
dependencies = [
    "crewai>=1.14.7",
    "langchain>=0.3.0",
    "langchain-groq>=0.2.0",
    "langgraph>=1.2.6",
    "litellm>=1.89.3",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "rich>=13.0.0",
    "streamlit>=1.35.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
crew = [
    "crewai>=0.80.0",
]

[project.scripts]
vibeforge = "mood_playlist_agent.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mood_playlist_agent"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
